--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
-    "\n",
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "_**AI**_: the set of tasks in which a computer can make decisions. To create machines that can think of themselves, mimic human intelligence and behaviour. \n",
     "- **ANI** (Artificial Narrow Intelligence): does one thing well; these are basically any ML model. Examples: smart speakers, self-driving cars, web search, AI in farming and factories;\n",
     "- **AGI** (Artificial General Intelligence): AI systems that can do anything that a typical human can do. \n",
@@ -39,8 +44,13 @@
     "| Iteration | The number of batches needed to complete one epochs (an iteration is also the step at which the weights are updated). So if sample size $n=100$, batch size $k=20$, then we need 5 iterations to complete one epoch. |\n",
     "| Learning rate $\\eta$ or $\\alpha$ | Provides the model with a scale of how much model weights should be adjusted |\n",
     "| Cost function | A cost function is used to calculate the cost, which is the difference between the predicted value and the actual value. |\n",
-    "| Transfer learning | Taking a pre-trained model and training it again on new data and modifying e.g. the output layer |\n",
-    "\n",
+    "| Transfer learning | Taking a pre-trained model and training it again on new data and modifying e.g. the output layer |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "ML systems can be classified based on:\n",
     "1. <u>Whether the models are trained with human supervision:</u>\n",
     "   1. Supervised\n",
@@ -62,6 +72,22 @@
     "4. <u>Whether they work by comparing new data points to known data points or detect patterns in training data and build a predictive model:</u>\n",
     "\t 1. **Instance-based learning**: these learning algorithms rely on a similarity measure to make predictions; e.g. k-Nearest Neighbors\n",
     "\t 2. **Model-based learning**: e.g. linear model (linear regression);\n",
+    "5. <u>Whether models make fixed predictions or model uncertainty explicitly:</u>\n",
+    "   1. **Deterministic models**\n",
+    "      1. Always give the same output for a given input\n",
+    "      2. Do not explicitly represent uncertainty\n",
+    "      3. Examples: decision trees (without probabilities), SVM, KNN\n",
+    "   2. **Probabilistic models**\n",
+    "      1. Provide a probability distribution over possible outcomes\n",
+    "      2. Explicitly quantify uncertainty in predictions\n",
+    "      3. Examples: Naive Bayes, Logistic Regression, Gaussian Mixture Models, Bayesian Networks, Hidden Markov Models\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "---\n",
     "\n",
