--- a/_0_Probability.ipynb
+++ b/_0_Probability.ipynb
@@ -736,6 +736,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Markov Model\n",
+    "\n",
+    "- Works with sequences of **states (S)**, e.g. categorical symbols, words;\n",
+    "  - e.g. if we are modelling weather, states can be \"sunny\", \"rainy\", \"cloudy\". \n",
+    "- A Markov Model is described by two distributions: \n",
+    "  1) ⭐ State Transition Matrix $A$\n",
+    "  2) ⭐ Initial State Distribution $\\pi$\n",
+    "\n",
+    "Markov Model can answer the following questions:\n",
+    "1. Given $A$ and $\\pi$, and sequence ${S_1, S_2, ..., S_T}$, what's the probability of seeing that sequence?\n",
+    "\n",
+    "Answer: \n",
+    "\n",
+    "$$\n",
+    "\\large\n",
+    "P(S_{1...T}) = P(S_1) \\prod_{t=2}^{T} P(S_t | S_{t-1}) = \\pi_{S_1} \\prod_{t=2}^{T} A_{S_{t-1}, S_t}\n",
+    "$$\n",
+    "\n",
+    "1. Predict next word. \n",
+    "\n",
+    "**State (S)**\n",
+    "- Notation of state at time $t$: $S(t) = S_t$\n",
+    "  - $t \\in \\Z, t \\ge 1$\n",
+    "- $M$ - total number of possible states.\n",
+    "  - E.g. $M = 3$ for states \"sunny\", \"rainy\", \"cloudy\"\n",
+    "- We use $i$ or $j$ to index the state space, e.g. $P(S_t = i)$ - means probability that state at time $t$ is $i$\n",
+    "\n",
+    "**State distribution: $P(S_t)$**\n",
+    "\n",
+    "- $P(S_t) = P(S_t = 1), P(S_t = 2), ... , P(S_t = M)$\n",
+    "  - E.g. $P(S_{\\text{Monday}} = \\text{rainy}$)\n",
+    "\n",
+    "**State transitions**\n",
+    "\n",
+    "- $P(S_t = j | S_{t-1} = i)$, a.k.a. probability that the state at time $t$ is $j$, given that the state at time $(t-1)$ was $i$. \n",
+    "- It's a conditional probability\n",
+    "- Since both $i$ and $j$ can take on values $\\in [1, M]$, there are $M^2$ values for state transitions\n",
+    "\n",
+    "⭐ **State Transition Matrix (A)**\n",
+    "\n",
+    "$$\n",
+    "\\large\n",
+    "A_{i j} = P(S_t = j | S_{t-1} = i), \\forall i = 1...M, j = 1...M\n",
+    "$$\n",
+    "where\n",
+    "- $i$ = previous state\n",
+    "- $j$ = next state\n",
+    "- $A$ = an M*M matrix\n",
+    "\n",
+    "Note that in this case, $A$ doesn't depend on $t$ = **time-homogeneous Markov process**.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "<img src=\"Media/markov-chains-example-1.png\" width=600>\n",
+    "\n",
+    "Training $A$: it's number of times we transition from state $i$ to state $j$, divided by the total number of times we were in state $i$:\n",
+    "\n",
+    "$$\n",
+    "\\large\n",
+    "\\hat{A_{ij}} = \\cfrac{count(i \\to j)}{count(i)}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Initial State**\n",
+    "\n",
+    "- Enables us to get the first state in a sequence (there is no previous state for this state).\n",
+    "\n",
+    "⭐ **Initial State Distribution ($\\pi$)**\n",
+    "\n",
+    "$\\pi = P(S_1 = i), i \\in [1, M]$\n",
+    "\n",
+    "Training $\\pi$: \n",
+    "\n",
+    "$$\n",
+    "\\large\n",
+    "\\hat{\\pi_{i}} = \\cfrac{count(S_1 = i)}{N}\n",
+    "\\\\~\\\\\n",
+    "\\text{ , where}\n",
+    "\\\\\n",
+    "\\text{$\\hat{\\pi_{i}}$ - estimate of $\\pi_{i}$ , }\n",
+    "\\\\\n",
+    "\\text{$N$ - number of sequences in the dataset}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Another example of Markov chains (a very simple one). Let's consider this simple sentence:\n",
     "\n",
     "`You you like me like me like you me`. \n",
