--- a/_0_Statistics.ipynb
+++ b/_0_Statistics.ipynb
@@ -2714,6 +2714,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implications of CLT:\n",
+    "- This means that no matter how irregular, skewed, or jagged the original population might be, the averages will settle into a Gaussian shape;\n",
+    "- Therefore, it explains why polls with a few thousand people can forecast the preferences of millions, why quality control in factories work\n",
+    "- Collecting more data reduces the variability in sampling distributions, so the estimate becomes sharper, as the standard deviation of the sample mean is $\\cfrac{\\sigma}{\\sqrt{n}}$. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
