--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -165,7 +165,8 @@
     "\t- 1997: Deep Blue beat the chess champion Garry Kasparov; \n",
     "\t- Two reasons: computing power and data (due to the internet and social media)\n",
     "- 2006: Fei-Fei Li started working on the ImageNet visual database, introduced in 2009, which became a catalyst for the AI boom and the basis of an annual competition for image recognition algorithms;\n",
-    "- 2012: Geoffrey Hinton, Ilya Sutskever and Alex Krizhevsky introduced a deep CNN - AlexNet - that won the ImageNet challenge and triggered the explosion of deep learning reserach and implementation. \n"
+    "- 2012: **AlexNet (image recognition)**:\n",
+    "  - Geoffrey Hinton, Ilya Sutskever and Alex Krizhevsky introduced a deep CNN - AlexNet - that won the ImageNet challenge and triggered the explosion of deep learning reserach and implementation. \n"
    ]
   },
   {
