--- a/_4_ML_DL.ipynb
+++ b/_4_ML_DL.ipynb
@@ -2879,11 +2879,16 @@
     "- **Information Bottleneck**: Encoder in the basic Encoder-Decoder unrolling the LSTMs compresses the entire input sentence into a single context vector in the final hidden state of the encoder. This works fine for short sentences, but for longer phrases, even with LSTMs, words that are input early on can be forgotten;\n",
     "  - *This disadvantage is solved by Attention mechanism*\n",
     "\n",
+    "The encoder-decoder architecture consists of two components:\n",
+    "- Encoder: \n",
+    "  - Reads and compresses;\n",
+    "  - converts an input sequence of tokens into a sequence of embedding vectors (hidden state / context)\n",
+    "- Decoder: \n",
+    "  - Unfolds that summary into the target sentence, one word at a time, until `<EOS>`\n",
+    "  - uses the encoder's hidden state to iteratively generate an output sequence of tokens, one token at a time\n",
     "\n",
-    "Features:\n",
-    "- Encoder reads and compresses;\n",
-    "- Decoder unfolds that summary into the target sentence, one word at a time, until `<EOS>`\n",
-    "- By decoupling the Encoder from the Decoder, the input text and the translated output text can be different lengths.\n",
+    "\n",
+    "By decoupling the Encoder from the Decoder, the input text and the translated output text can be different lengths.\n",
     "\n",
     "Simplified glance at the architecture:\n",
     "\n",
@@ -3005,6 +3010,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Transformers:\n",
+    "- The input text is tokenised and converted to token embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The pip library `transformers` can be used for: \n",
     "- Text classification\n",
     "- question-answering\n",
@@ -3028,6 +3041,47 @@
     "- **Working with long documents**: self-attention works extremely well on paragraph-long texts, but it becomes very expensive when we move to longer texts like whole documents;\n",
     "- **Opacity**: transformers are to a large extent opaque - it is hard or impossible to unravel the reason why a model made a certain prediction. \n",
     "- **Bias**: transformer models are predominantly pretrained on text data from the internet. This imprints all the biases that are present in the data into the models. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder-only\n",
+    "\n",
+    "These models convert an input sequence of text into a rich numerical representation that is well suited for tasks like text classification or NER.\n",
+    "\n",
+    "The representation computed for a given token in this architecture depends both on the left and right contexts (bidirectional attention).\n",
+    "\n",
+    "Examples:\n",
+    "- BERT\n",
+    "- RoBERTa\n",
+    "- DistilBERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decoder-only\n",
+    "\n",
+    "These models auto-complete the sentence by iteratively predicting the most probable next word. The representation computed for a given token in this architecture depends only on the left context (causal / autoregressive attention).\n",
+    "\n",
+    "Examples:\n",
+    "- Family of GPT models "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder-decoder\n",
+    "\n",
+    "These are used for modelling complex mappings from one sequence of text to another. \n",
+    "\n",
+    "- Transformer architecture\n",
+    "- BART\n",
+    "- T5"
    ]
   },
   {
