--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -15017,7 +15017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15120,7 +15120,7 @@
        "7  A7  B7  C7  D7"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15144,8 +15144,8 @@
     "df2 = pd.DataFrame(\n",
     "    {\n",
     "        \"A\": [\"A4\", \"A5\", \"A6\", \"A7\"],\n",
-    "        \"B\": [\"B4\", \"B5\", \"B6\", \"B7\"],\n",
     "        \"C\": [\"C4\", \"C5\", \"C6\", \"C7\"],\n",
+    "        \"B\": [\"B4\", \"B5\", \"B6\", \"B7\"],\n",
     "        \"D\": [\"D4\", \"D5\", \"D6\", \"D7\"],\n",
     "    },\n",
     "    index=[4, 5, 6, 7],\n",
@@ -15161,6 +15161,152 @@
     "# Update the existing dataframe\n",
     "df1 = pd.concat( [df1, df2], ignore_index=True )\n",
     "df1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>A</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B0</td>\n",
+       "      <td>C0</td>\n",
+       "      <td>D0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B4</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B5</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>B6</td>\n",
+       "      <td>C6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>B7</td>\n",
+       "      <td>C7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    B   C    D    A\n",
+       "0  B0  C0   D0  NaN\n",
+       "1  B1  C1   D1  NaN\n",
+       "2  B2  C2   D2  NaN\n",
+       "3  B3  C3   D3  NaN\n",
+       "4  B4  C4  NaN   A4\n",
+       "5  B5  C5  NaN   A5\n",
+       "6  B6  C6  NaN   A6\n",
+       "7  B7  C7  NaN   A7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###################################################################################################################################\n",
+    "#####   Concatenate dataframes   ##################################################################################################\n",
+    "###################################################################################################################################\n",
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"B\": [\"B0\", \"B1\", \"B2\", \"B3\"],\n",
+    "        \"C\": [\"C0\", \"C1\", \"C2\", \"C3\"],\n",
+    "        \"D\": [\"D0\", \"D1\", \"D2\", \"D3\"],\n",
+    "    },\n",
+    "    index=[0, 1, 2, 3],\n",
+    ")\n",
+    "\n",
+    "df2 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"A\": [\"A4\", \"A5\", \"A6\", \"A7\"],\n",
+    "        \"B\": [\"B4\", \"B5\", \"B6\", \"B7\"],\n",
+    "        \"C\": [\"C4\", \"C5\", \"C6\", \"C7\"]\n",
+    "    },\n",
+    "    index=[4, 5, 6, 7],\n",
+    ")\n",
+    "\n",
+    "# Concatenate several dataframes into a new one\n",
+    "df3 = pd.concat(\n",
+    "    [df1, df2], \n",
+    "    ignore_index=True # Clear the existing index and reset it in the result\n",
+    ")\n",
+    "df3\n",
+    "\n",
+    "# Update the existing dataframe\n",
+    "df1 = pd.concat( [df1, df2], ignore_index=True )\n",
+    "df1"
    ]
   },
   {
@@ -20763,7 +20909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
