--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -10316,6 +10316,7 @@
     "df1['Date'] = pd.to_datetime(df1['Date'], format='%d.%m.%Y')\n",
     "df1.reset_index(inplace=True)\n",
     "\n",
+    "# Converts it to str type\n",
     "df1['DDMM']   = df1['Date'].dt.strftime('%d.%m')\n",
     "df1['DDMMYY'] = df1['Date'].dt.strftime('%d/%m/%y')\n",
     "df1['YYYY']   = df1['Date'].dt.strftime('%Y')\n",
@@ -12582,7 +12583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12645,7 +12646,7 @@
        "2  a3  b3  a3+b3  a3+b3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
