--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -6632,9 +6632,21 @@
     "Mean of the vertical distances from the points to the line. Correponds to the Manhattan norm (measures the distance between two points, e.g. in a city blocks, if you can only travel along orthogonal planes, so only horizontally or vertically). \n",
     "\n",
     "$$ MAE = \\frac{1}{n} \\sum_{i=1}^{n} \\mid y_{i}-\\hat{y_{i}} \\mid = \\frac{ \\sum_{i=1}^{n} abs(y_{i}-\\hat{y_{i}}) }{ n } $$\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "✅ **Advantages**:\n",
-    "- Less sensitive to outliers, so use in data with tons of outliers. \n"
+    "- Less sensitive to outliers, so use in data with tons of outliers. \n",
+    "- Intuitive to understand;\n",
+    "- Error in same units as forecast;\n",
+    "\n",
+    "❌ **Disadvantages**:\n",
+    "- Doesn't penalise outliers;\n",
+    "- Scale dependent - so you cannot compare MAE metrics of two different models if their scales are different;\n"
    ]
   },
   {
@@ -6662,8 +6674,8 @@
     "- Punishes you for having larger errors, so is very sensitive to outliers;\n",
     "\n",
     "❌ **Disadvantages**:\n",
-    "- The unit of measurement is now different = $\\text{unit}^{2}$\n",
-    "\n"
+    "- Less interpretable, as the unit of measurement is now different = $\\text{unit}^{2}$\n",
+    "- Scale dependent\n"
    ]
   },
   {
@@ -6680,7 +6692,12 @@
     "\n",
     "✅ Advantages:\n",
     "- Punishes you for having larger errors, e.g. outliers (but less than MSE)\n",
-    "- Has the same units of measurement as the original data;\n"
+    "- Has the same units of measurement as the original data;\n",
+    "- Best of both worlds of MSE and MAE;\n",
+    "\n",
+    "❌ **Disadvantages**:\n",
+    "- Less interpretable;\n",
+    "- Scale dependent;\n"
    ]
   },
   {
@@ -9181,7 +9198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-2",
    "language": "python",
    "name": "python3"
   },
@@ -9195,7 +9212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
