--- a/_Numpy.ipynb
+++ b/_Numpy.ipynb
@@ -2449,7 +2449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science",
    "language": "python",
    "name": "python3"
   },
@@ -2463,7 +2463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
