--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -4131,7 +4131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4210,7 +4210,7 @@
        "4   Jack   32     Tokyo   80000"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4230,23 +4230,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'John'"
+       "Name          John\n",
+       "Age             25\n",
+       "City      New York\n",
+       "Salary       50000\n",
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Select one row\n",
-    "df['Name'].loc[0]"
+    "df.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name          John\n",
+       "Age             25\n",
+       "City      New York\n",
+       "Salary       50000\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0]"
    ]
   },
   {
@@ -4630,6 +4658,77 @@
    "source": [
     "df.loc[df['Age'] < 40, ['Name', 'Country']]\n",
     "df.iloc[df['Age'] < 40, [0, 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Martha</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0    Name Age\n",
+       "0    John  20\n",
+       "1  Martha  15"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Set first row as column headers.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    '1': ['Name', 'John', 'Martha'],\n",
+    "    '2': ['Age', 20, 15]\n",
+    "})\n",
+    "df.columns = df.iloc[0]\n",
+    "df = df[1:].reset_index(drop=True)\n",
+    "df"
    ]
   },
   {
@@ -10541,10 +10640,445 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year                 int64\n",
+      "Month                int64\n",
+      "last_day    datetime64[ns]\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>last_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2026-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2027</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2027-03-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Month   last_day\n",
+       "0  2025      1 2025-01-31\n",
+       "1  2026      2 2026-02-28\n",
+       "2  2027      3 2027-03-31"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "For Pandas dataframe,\n",
+    "get last day for the given month of a given year.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Year': [2025, 2026, 2027],\n",
+    "    'Month': [1, 2, 3]\n",
+    "})\n",
+    "\n",
+    "### Solution 1\n",
+    "# df['last_day'] = pd.to_datetime({\n",
+    "#     'year': df['Year'],\n",
+    "#     'month': df['Month'],\n",
+    "#     'day': [1]*len(df)\n",
+    "# }) + pd.offsets.MonthEnd(0)\n",
+    "\n",
+    "### Solution 2\n",
+    "df['last_day'] = df['Year'].astype(str) + '-' + df['Month'].astype(str) + '-01'\n",
+    "df['last_day'] = pd.to_datetime(df['last_day'])\n",
+    "df['last_day'] = df['last_day'] + pd.offsets.MonthEnd(0)\n",
+    "\n",
+    "print(df.dtypes)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>groups</th>\n",
+       "      <th>date</th>\n",
+       "      <th>value</th>\n",
+       "      <th>lag_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>1_2016-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>1_2017-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-01-02</td>\n",
+       "      <td>1_2017-01-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-02-02</td>\n",
+       "      <td>1_2017-02-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>1_2017-12-31</td>\n",
+       "      <td>1_2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>1_2018-01-02</td>\n",
+       "      <td>1_2017-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>2_2017-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2_2018-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>2_2019-01-01</td>\n",
+       "      <td>2_2018-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>2_2019-02-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   groups       date         value     lag_value\n",
+       "0       1 2016-12-31  1_2016-12-31           NaN\n",
+       "1       1 2017-01-01  1_2017-01-01           NaN\n",
+       "2       1 2017-01-02  1_2017-01-02           NaN\n",
+       "3       1 2017-02-02  1_2017-02-02           NaN\n",
+       "4       1 2017-12-31  1_2017-12-31  1_2016-12-31\n",
+       "5       1 2018-01-02  1_2018-01-02  1_2017-01-02\n",
+       "6       2 2017-12-31  2_2017-12-31           NaN\n",
+       "7       2 2018-01-01  2_2018-01-01           NaN\n",
+       "8       2 2019-01-01  2_2019-01-01  2_2018-01-01\n",
+       "9       2 2019-02-01  2_2019-02-01           NaN"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Get value for a column from 12 months exactly in the past.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "fechas1 = ['2016-12-31', '2017-01-01', '2017-01-02', '2017-02-02', '2017-12-31', '2018-01-02']\n",
+    "fechas2 = ['2017-12-31', '2018-01-01', '2019-01-01', '2019-02-01']\n",
+    "groups = [1]*len(fechas1) + [2]*len(fechas2)\n",
+    "df = pd.DataFrame({\n",
+    "    'groups': groups,\n",
+    "    'date': pd.to_datetime(fechas1 + fechas2),\n",
+    "    'value': [f\"{i}_{j}\" for i, j in zip(groups, fechas1+fechas2)]\n",
+    "})\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['lag_date'] = df['date'] - pd.DateOffset(months=12)\n",
+    "\n",
+    "# Self-join to get values from 12 months earlier\n",
+    "# per each group\n",
+    "merged = pd.merge(\n",
+    "    df,\n",
+    "    df[['groups', 'date', 'value']].rename(columns = {\n",
+    "        'date': 'lag_date',\n",
+    "        'value': 'lag_value'\n",
+    "    }),\n",
+    "    on = ['groups', 'lag_date'],\n",
+    "    how = 'left'\n",
+    ")\n",
+    "merged = merged.drop(columns = ['lag_date'])\n",
+    "merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>groups</th>\n",
+       "      <th>date</th>\n",
+       "      <th>value_x</th>\n",
+       "      <th>YearMonth</th>\n",
+       "      <th>LagYearMonth</th>\n",
+       "      <th>value_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>1_2016-12-31</td>\n",
+       "      <td>2016-12</td>\n",
+       "      <td>2015-12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>1_2017-01-01</td>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>2016-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-02-02</td>\n",
+       "      <td>1_2017-02-02</td>\n",
+       "      <td>2017-02</td>\n",
+       "      <td>2016-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>1_2017-12-31</td>\n",
+       "      <td>2017-12</td>\n",
+       "      <td>2016-12</td>\n",
+       "      <td>1_2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>1_2018-01-02</td>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>1_2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>2_2017-12-31</td>\n",
+       "      <td>2017-12</td>\n",
+       "      <td>2016-12</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>2_2018-01-01</td>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-01-10</td>\n",
+       "      <td>2_2019-01-10</td>\n",
+       "      <td>2019-01</td>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>2_2018-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-02-01</td>\n",
+       "      <td>2_2019-02-01</td>\n",
+       "      <td>2019-02</td>\n",
+       "      <td>2018-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   groups       date       value_x YearMonth LagYearMonth       value_y\n",
+       "0       1 2016-12-31  1_2016-12-31   2016-12      2015-12           NaN\n",
+       "1       1 2017-01-01  1_2017-01-01   2017-01      2016-01           NaN\n",
+       "2       1 2017-02-02  1_2017-02-02   2017-02      2016-02           NaN\n",
+       "3       1 2017-12-31  1_2017-12-31   2017-12      2016-12  1_2016-12-31\n",
+       "4       1 2018-01-02  1_2018-01-02   2018-01      2017-01  1_2017-01-01\n",
+       "5       2 2017-12-31  2_2017-12-31   2017-12      2016-12           NaN\n",
+       "6       2 2018-01-01  2_2018-01-01   2018-01      2017-01           NaN\n",
+       "7       2 2019-01-10  2_2019-01-10   2019-01      2018-01  2_2018-01-01\n",
+       "8       2 2019-02-01  2_2019-02-01   2019-02      2018-02           NaN"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Same as before but ignore the day.\n",
+    "This works if you have non-repeating months.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "\n",
+    "fechas1 = ['2016-12-31', '2017-01-01', '2017-02-02', '2017-12-31', '2018-01-02']\n",
+    "fechas2 = ['2017-12-31', '2018-01-01', '2019-01-10', '2019-02-01']\n",
+    "groups = [1]*len(fechas1) + [2]*len(fechas2)\n",
+    "df = pd.DataFrame({\n",
+    "    'groups': groups,\n",
+    "    'date': pd.to_datetime(fechas1 + fechas2),\n",
+    "    'value': [f\"{i}_{j}\" for i, j in zip(groups, fechas1+fechas2)]\n",
+    "})\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "df['YearMonth'] = df['date'].dt.to_period('M')\n",
+    "df['LagYearMonth'] = df['YearMonth'] - 12\n",
+    "df = df.sort_values(by = ['groups', 'date', 'value'])\n",
+    "\n",
+    "df_join = (\n",
+    "    df[['groups', 'YearMonth', 'value']]\n",
+    "    .rename(columns = {\n",
+    "        'YearMonth': 'LagYearMonth',\n",
+    "        'Value': 'lag_value'\n",
+    "    })\n",
+    ")\n",
+    "\n",
+    "merged = pd.merge(\n",
+    "    df,\n",
+    "    df_join,\n",
+    "    on = ['groups', 'LagYearMonth'],\n",
+    "    how = 'left'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# merged = merged.drop(columns = ['YearMonth', 'LagYearMonth', 'lag_value'])\n",
+    "\n",
+    "merged\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -21065,7 +21599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
