--- a/_0_time_series.ipynb
+++ b/_0_time_series.ipynb
@@ -4321,7 +4321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "handbook-data-science-py3.12",
+   "display_name": "data-science-2",
    "language": "python",
    "name": "python3"
   },
@@ -4335,7 +4335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
