--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -9198,7 +9198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-2",
    "language": "python",
    "name": "python3"
   },
@@ -9212,7 +9212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
