--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -22846,7 +22846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -22860,7 +22860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
