--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -15138,7 +15138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-2",
    "language": "python",
    "name": "python3"
   },
@@ -15152,7 +15152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
