--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -1176,13 +1176,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reader\n",
-    "\n",
-    "```py\n",
-    "\n",
+    "## Reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read from web url\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/datasets/covid-19/master/data/countries-aggregated.csv', parse_dates=['Date'])\n",
-    "\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/datasets/covid-19/master/data/countries-aggregated.csv', parse_dates=['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# File reader\n",
     "varname = pd.read_csv(\n",
     "\t'name.csv', \n",
@@ -1200,13 +1212,29 @@
     "\tskiprows=2, # skip reading the first 2 rows from the file\n",
     "\tnrows=10, # number of a file's rows to read\n",
     "\tthousands=','\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_json('filename.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_excel(\n",
     "\t'data.slxs',\n",
-    "\tsheet_name = 'sheet1'\n",
-    ")\n",
-    "df = pd.read_json('filename.json')\n",
-    "```"
+    "\tsheet_name = 'sheet1',\n",
+    "    dtype = {'column_name': str} # this is useful e.g. if you have a column with values like 0000, 0001, but you don't want it to be converted to 0, 1\n",
+    ")"
    ]
   },
   {
@@ -24676,7 +24704,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-2",
    "language": "python",
    "name": "python3"
   },
@@ -24690,7 +24718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
