--- a/_0_Statistics.ipynb
+++ b/_0_Statistics.ipynb
@@ -485,6 +485,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Percentile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10-th percentile: 1.4\n",
+      "25-th percentile: 2.0\n",
+      "50-th percentile: 3.0\n",
+      "75-th percentile: 4.0\n",
+      "90-th percentile: 31.600000000000005\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = [1, 2, 3, 4, 50]\n",
+    "for i in (10, 25, 50, 75, 90):\n",
+    "    p_calc = np.percentile(a, i)\n",
+    "    print(f\"{i}-th percentile: {p_calc}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 % 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 0th percentile is: 1\n",
+      "The 1th percentile is: 1.04\n",
+      "The 10th percentile is: 1.4\n",
+      "The 25th percentile is: 2\n",
+      "The 50th percentile is: 3\n",
+      "The 75th percentile is: 4\n",
+      "The 90th percentile is: 31.600000000000005\n",
+      "The 99th percentile is: 48.16\n",
+      "The 100th percentile is: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def percentile_manual(data: list,\n",
+    "                      percentile: int,\n",
+    "                      verbose: bool = False\n",
+    "                      ) -> float:\n",
+    "    \"\"\"\n",
+    "    the specified percentile of a list of numbers from scratch.\n",
+    "    \n",
+    "    Args:\n",
+    "        data (list):      The list of numerical data.\n",
+    "        percentile (int): The desired percentile (between 0 and 100).\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The calculated percentile value.\n",
+    "    \"\"\"\n",
+    "    # Sort the data\n",
+    "    data_sorted = sorted(data)\n",
+    "    n = len(data_sorted)\n",
+    "    # Calculate the rank position: determine the rank (index) corresponding to the desired percentile.\n",
+    "    rank = (percentile / 100) * (n - 1)\n",
+    "    lower_index = int(rank)\n",
+    "    upper_index = lower_index + 1\n",
+    "    \n",
+    "    # If rank is an integer, return that value directly\n",
+    "    if rank % 1 == 0:\n",
+    "        percentile_value = data_sorted[int(rank)]\n",
+    "\n",
+    "    # edgecase\n",
+    "    elif upper_index >= n:\n",
+    "        percentile_value = data_sorted[lower_index]\n",
+    "    else:\n",
+    "        # Interpolate between the two nearest values\n",
+    "        fraction = rank - lower_index\n",
+    "        percentile_value = data_sorted[lower_index] + fraction * (data_sorted[upper_index] - data_sorted[lower_index])\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(f\"The {percentile}th percentile is: {percentile_value}\")\n",
+    "    return percentile_value\n",
+    "\n",
+    "a = [1, 2, 3, 4, 50]\n",
+    "for i in (0, 1, 10, 25, 50, 75, 90, 99, 100):\n",
+    "    percentile_manual(a, i, True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Quartiles\n",
     "\n",
     "> Calculate quartiles for the given frequency table.\n",
