--- a/_0_Statistics.ipynb
+++ b/_0_Statistics.ipynb
@@ -526,87 +526,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5 % 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The 0th percentile is: 1\n",
-      "The 1th percentile is: 1.04\n",
-      "The 10th percentile is: 1.4\n",
-      "The 25th percentile is: 2\n",
-      "The 50th percentile is: 3\n",
-      "The 75th percentile is: 4\n",
-      "The 90th percentile is: 31.600000000000005\n",
-      "The 99th percentile is: 48.16\n",
-      "The 100th percentile is: 50\n"
+      "Different methods of interpolation in calculating 90th percentile:\n",
+      " > Method linear: percentile = 31.600000000000005\n",
+      " > Method lower: percentile = 4\n",
+      " > Method higher: percentile = 50\n",
+      " > Method nearest: percentile = 50\n",
+      " > Method midpoint: percentile = 27.0\n"
      ]
     }
    ],
    "source": [
-    "def percentile_manual(data: list,\n",
-    "                      percentile: int,\n",
-    "                      verbose: bool = False\n",
-    "                      ) -> float:\n",
+    "\"\"\"\n",
+    "Note that np.percentile has different interpolation methods:\n",
+    "| Method           | Formula / Description                               | Notes                                                      |\n",
+    "| ---------------- | --------------------------------------------------- | ---------------------------------------------------------- |\n",
+    "| **`'linear'`**   | Linearly interpolate between the two nearest ranks. | Default method. Same as our manual implementation earlier. |\n",
+    "| **`'lower'`**    | Always use the lower data point (floor).            | Step function that jumps up at each data point.            |\n",
+    "| **`'higher'`**   | Always use the higher data point (ceil).            | Step function that stays high after each data point.       |\n",
+    "| **`'nearest'`**  | Use the nearest data point (round to nearest rank). | Closest value to the desired percentile position.          |\n",
+    "| **`'midpoint'`** | Average the two nearest data points.                | Simple midpoint, no weighting by distance.                 |\n",
+    "\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "\n",
+    "a = [1, 2, 3, 4, 50]\n",
+    "percentile = 90\n",
+    "print(f\"Different methods of interpolation in calculating {percentile}th percentile:\")\n",
+    "for i in ('linear', 'lower', 'higher', 'nearest', 'midpoint'):\n",
+    "    calc_percentile = np.percentile(a, 90, method = i)\n",
+    "    print(f\" > Method {i}: percentile = {calc_percentile}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0-th percentile: 1\n",
+      "1-th percentile: 1.04\n",
+      "10-th percentile: 1.4\n",
+      "25-th percentile: 2\n",
+      "50-th percentile: 3\n",
+      "75-th percentile: 4\n",
+      "90-th percentile: 31.600000000000005\n",
+      "99-th percentile: 48.16\n",
+      "100-th percentile: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def percentile(percentile: int,\n",
+    "               data: list,\n",
+    "               verbose: bool = False\n",
+    "               ) -> float:\n",
     "    \"\"\"\n",
-    "    the specified percentile of a list of numbers from scratch.\n",
+    "    Calculate the specified percentile of a list of numbers from scratch.\n",
     "    \n",
     "    Args:\n",
-    "        data (list):      The list of numerical data.\n",
     "        percentile (int): The desired percentile (between 0 and 100).\n",
-    "    \n",
+    "        data (list):      The list of numerical data.\n",
+    "        verbose (bool):   Do you want to print out some calculations?\n",
     "    Returns:\n",
     "        float: The calculated percentile value.\n",
     "    \"\"\"\n",
+    "    # First, check if the data is in the correct format\n",
+    "    assert len(data) > 0, \"ERROR: empty list is passed! Ensure the data list is not empty.\"\n",
+    "    assert percentile >= 0 and percentile <= 100, \"ERROR: percentile must be between 0 and 100, both inclusive.\"\n",
+    "    assert all(isinstance(i, (int, float)) for i in data), \"ERROR: All elements must be numeric.\"\n",
+    "    # .\n",
     "    # Sort the data\n",
     "    data_sorted = sorted(data)\n",
     "    n = len(data_sorted)\n",
-    "    # Calculate the rank position: determine the rank (index) corresponding to the desired percentile.\n",
+    "    # Calculate the rank position:\n",
+    "    # determine the rank (index) corresponding to the desired percentile\n",
     "    rank = (percentile / 100) * (n - 1)\n",
-    "    lower_index = int(rank)\n",
-    "    upper_index = lower_index + 1\n",
-    "    \n",
-    "    # If rank is an integer, return that value directly\n",
+    "    lower_index, upper_index = math.floor(rank), math.ceil(rank)\n",
+    "    # .\n",
+    "    # If rank doesn't have non-null decimal points, return the value directly\n",
     "    if rank % 1 == 0:\n",
     "        percentile_value = data_sorted[int(rank)]\n",
-    "\n",
-    "    # edgecase\n",
-    "    elif upper_index >= n:\n",
-    "        percentile_value = data_sorted[lower_index]\n",
+    "    # Otherwise check - interpolation\n",
     "    else:\n",
-    "        # Interpolate between the two nearest values\n",
-    "        fraction = rank - lower_index\n",
+    "        fraction = rank % 1\n",
     "        percentile_value = data_sorted[lower_index] + fraction * (data_sorted[upper_index] - data_sorted[lower_index])\n",
-    "\n",
+    "    # .\n",
     "    if verbose:\n",
     "        print(f\"The {percentile}th percentile is: {percentile_value}\")\n",
     "    return percentile_value\n",
     "\n",
     "a = [1, 2, 3, 4, 50]\n",
     "for i in (0, 1, 10, 25, 50, 75, 90, 99, 100):\n",
-    "    percentile_manual(a, i, True)\n"
+    "    p_calc = percentile(i, a)\n",
+    "    print(f\"{i}-th percentile: {p_calc}\")"
    ]
   },
   {
@@ -6846,7 +6870,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6860,7 +6884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
