--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -347,6 +347,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: NLTK is a great NLP toolkit - it's toolkit is impressive. It makes processing text easy! Email is example@gmail.com.\n",
+      " > Sentence tokenization: [\"NLTK is a great NLP toolkit - it's toolkit is impressive.\", 'It makes processing text easy!', 'Email is example@gmail.com.']\n",
+      " > Word tokenization: ['NLTK', 'is', 'a', 'great', 'NLP', 'toolkit', '-', 'it', \"'s\", 'toolkit', 'is', 'impressive', '.', 'It', 'makes', 'processing', 'text', 'easy', '!', 'Email', 'is', 'example', '@', 'gmail.com', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "# nltk.download('punkt')\n",
+    "from nltk.tokenize import (\n",
+    "    sent_tokenize,\n",
+    "    word_tokenize\n",
+    ")\n",
+    "\n",
+    "text = \"NLTK is a great NLP toolkit - it's toolkit is impressive. It makes processing text easy! Email is example@gmail.com.\"\n",
+    "print(f\"Sentence: {text}\")\n",
+    "\n",
+    "sentences = sent_tokenize(text)\n",
+    "print(f\" > Sentence tokenization: {sentences}\")\n",
+    "\n",
+    "words = word_tokenize(text)\n",
+    "print(f\" > Word tokenization: {words}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -488,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -531,6 +564,26 @@
     "display( lemmatizer.lemmatize('mice') )\n",
     "display( lemmatizer.lemmatize('going') )\n",
     "display( lemmatizer.lemmatize('going', pos=wordnet.VERB) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acne\n",
+      "acne\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ('acne', 'acnes'):\n",
+    "    output = lemmatizer.lemmatize(i)\n",
+    "    print(output)\n"
    ]
   },
   {
@@ -15138,7 +15191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -15152,7 +15205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
