--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -4159,7 +4159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -4238,7 +4238,7 @@
        "6   Jack   32     Tokyo   80000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5120,6 +5120,73 @@
    "source": [
     "### Select the first 3 rows of the last 2 columns\n",
     "df.iloc[:3, -2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "d30da7e0-e0ee-41c2-84f7-5ea9e82bca63",
+       "rows": [
+        [
+         "2",
+         "John"
+        ],
+        [
+         "3",
+         "Alice"
+        ],
+        [
+         "4",
+         "Bob"
+        ],
+        [
+         "5",
+         "Emily"
+        ],
+        [
+         "6",
+         "Jack"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/plain": [
+       "2     John\n",
+       "3    Alice\n",
+       "4      Bob\n",
+       "5    Emily\n",
+       "6     Jack\n",
+       "Name: Name, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All values in the first column\n",
+    "df.iloc[:, 0]"
    ]
   },
   {
