--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -17,14 +17,14 @@
     "\n",
     "> You can read more at https://www.kdnuggets.com/2017/02/natural-language-processing-key-terms-explained.html\n",
     "\n",
-    "| Term | Definition | \n",
-    "| - | - |\n",
-    "| Token | Words in a sentence. An atomic piece of text, that is almost always a word. |\n",
-    "| N-gram | N consecutive words. Can be unigram, bigram, trigram, and then N-gram. |\n",
-    "| Character | A more general term (compared to token) that also includes punctuation marks and whitespace, newline characters. |\n",
-    "| Sentence | A sequence of words, including punctuation marks; a sequence of tokens. |\n",
+    "| Term       | Definition | \n",
+    "| ---------- | - |\n",
+    "| Token      | In its general definition, it is an atomic piece of text in a sentence, that is almost always a word but also includes part of a word and punctuation. |\n",
+    "| N-gram     | A sequence of N consecutive tokens. Can be 1-gram / unigram (`Nice`), 2-gram / bigram (`Nice to`), 3-gram / trigram (`Nice to meet`), or of any size N for N-gram. |\n",
+    "| Character  | A more general term (compared to token) that includes punctuation, whitespaces, newlines, etc. |\n",
+    "| Sentence   | A sequence of words / tokens, including punctuation marks. |\n",
     "| Vocabulary | The set of unique words used in the text corpus. Usually it is a subset of all possible words in the text corpus. |\n",
-    "| Corpus | In linguistics and NLP, corpus (literally Latin for body) refers to a collection of texts that is used for model training and evaluation. Such collections may be formed of a single language of texts, or can span multiple languages -- there are numerous reasons for which multilingual corpora (the plural of corpus) may be useful. |\n",
+    "| Corpus     | In linguistics and NLP, corpus (literally Latin for body) refers to a collection of texts that is used for NLP model training and evaluation. Such collections may be formed of a single language of texts, or can span multiple languages -- there are numerous reasons for which multilingual corpora (the plural of corpus) may be useful. |\n",
     "\n",
     "<br>\n",
     "\n",
@@ -807,7 +807,7 @@
    "source": [
     "# Techniques for encoding\n",
     "\n",
-    "> Converting text into vectors.\n",
+    "> Converting text into vectors; vectorisation.\n",
     "\n",
     "An excellent source: https://medium.com/@shantanu_sharma/natural-language-processing-nlp-playlist-chapter-2-bag-of-words-n-gram-tf-idf-458a9669a746\n",
     "\n",
