--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -16264,7 +16264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16422,7 +16422,7 @@
     }
    ],
    "source": [
-    "## Melt\n",
+    "## Melt / unpivot\n",
     "import pandas as pd\n",
     "\n",
     "variable_df = pd.DataFrame({\n",
